# ladybird

./: CMakeLists.txt  Cargo.toml  ladybird.sublime-project  packets.dump  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  js-and-wasm-artifacts.yml  js-and-wasm-benchmarks.yml  lagom-template.yml  libjs-test262.yml  lint-code.yml  lint-commits.yml  nightly-lagom.yml  web-benchmarks.yml
AK/: Base64.cpp  BigInteger.cpp  BigInteger.h  CMakeLists.txt  Debug.h.in  Enum.h  EnumBits.h  Format.cpp  Format.h  Forward.h  JsonObjectSerializer.h  LEB128.h  MemoryStream.h  NonnullRawPtr.h  Random.cpp  String.h  StringBase.cpp  StringBase.h  StringBuilder.cpp  StringBuilder.h  StringData.h  StringHash.h  UnicodeUtils.h  Utf16Data.h  Utf16FlyString.cpp  Utf16FlyString.h  Utf16String.cpp  Utf16String.h  Utf16StringBase.h  Utf16StringBuilder.cpp  Utf16StringBuilder.h  Utf16StringData.cpp  Utf16StringData.h  Utf16View.cpp  Utf16View.h  Windows.h
Documentation/: BuildInstructionsLadybird.md  Omnibox.md  README.md
Documentation/EditorConfiguration/: QtCreatorConfiguration.md
Ladybird/Qt/: Tab.cpp
Libraries/: AbortOnPanic.rs  CMakeLists.txt
Libraries/LibArchive/: CMakeLists.txt  TarExtractor.cpp  TarExtractor.h  ZipArchive.cpp  ZipArchive.h
Libraries/LibArchive/Rust/: Cargo.toml  cbindgen.toml
Libraries/LibArchive/Rust/src/: lib.rs  zip.rs
Libraries/LibCompress/: Brotli.cpp  Brotli.h
Libraries/LibCore/: CMakeLists.txt  Directory.cpp  Directory.h  EventLoopImplementationUnix.cpp  EventLoopImplementationWindows.cpp  File.cpp  File.h  FilePosix.cpp  FileWindows.cpp  LocalServerWindows.cpp  MappedFileWindows.cpp  Process.cpp  Process.h  ProcessWindows.cpp  ResourceImplementation.cpp  ResourceImplementationFile.cpp  Socket.cpp  Socket.h  SocketWindows.cpp  System.cpp  System.h  SystemWindows.cpp  TCPServerWindows.cpp  TimeZone.cpp  TimeZone.h  TimeoutSet.h  UDPServerWindows.cpp
Libraries/LibDatabase/: Database.cpp  Database.h
Libraries/LibDevTools/: Actor.cpp  Actor.h  CMakeLists.txt  Connection.cpp  DevToolsDelegate.h  DevToolsServer.cpp  DevToolsServer.h  FirefoxClient.cpp  FirefoxClient.h  Forward.h  IndexedDBSerialization.cpp  IndexedDBSerialization.h  StorageHelpers.cpp  StorageHelpers.h
Libraries/LibFileSystem/: FileSystem.cpp
Libraries/LibGC/: CMakeLists.txt  PrimitiveStorage.cpp  PrimitiveStorage.h  Rootable.h
Libraries/LibGfx/: BitmapExport.cpp  BitmapExport.h  CMakeLists.txt  Color.cpp  Color.h  ColorConversion.cpp  Cursor.h  Direct3DContext.cpp  Direct3DContext.h  PainterSkia.cpp  PathSkia.cpp  PathSkia.h  SkiaBackendContext.cpp  SkiaVulkanMemoryAllocator.cpp  SkiaVulkanMemoryAllocator.h  TextLayout.cpp  TextLayout.h
Libraries/LibHTTP/: Forward.h  Header.cpp  Header.h  HeaderList.h  Method.cpp  Method.h  ReloadRequest.h
Libraries/LibIDL/: IDLParser.cpp  Types.h
Libraries/LibIPC/: AutoCloseFileDescriptor.cpp  AutoCloseFileDescriptor.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  TransportSocket.cpp  TransportSocket.h
Libraries/LibJS/: AST.cpp  CMakeLists.txt  Console.cpp  Console.h  Lexer.cpp  MarkupGenerator.cpp  Parser.cpp  Print.cpp  SourceCode.cpp  SourceCode.h  Token.h
Libraries/LibMedia/: CodedVideoFrameData.h  IncrementallyPopulatedStream.cpp  VideoDecoder.h
Libraries/LibRegex/: RegexMatch.h
Libraries/LibRequests/: ALPNHttpVersion.h  CameFromCache.h  NetworkError.h  Request.cpp  Request.h  RequestClient.cpp  RequestClient.h
Libraries/LibSandbox/: Seccomp.cpp
Libraries/LibTextCodec/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h
Libraries/LibThreading/: ThreadPool.cpp  ThreadPool.h
Libraries/LibURL/: Parser.cpp  Parser.h  RustIntegration.cpp  RustIntegration.h  URL.cpp  URL.h
Libraries/LibUnicode/: CMakeLists.txt  Calendar.cpp  Calendar.h  CharacterTypes.cpp  CharacterTypes.h  Collator.cpp  Collator.h  DateTimeFormat.cpp  DateTimeFormat.h  DisplayNames.cpp  DisplayNames.h  DurationFormat.cpp  DurationFormat.h  ICU.cpp  ICU.h  ListFormat.cpp  ListFormat.h  Locale.cpp  Locale.h  Normalize.cpp  Normalize.h  NumberFormat.cpp  NumberFormat.h  PluralRules.cpp  PluralRules.h  RelativeTimeFormat.cpp  RelativeTimeFormat.h  Segmenter.cpp  Segmenter.h  UnicodeKeywords.cpp  Utf16String.cpp
Libraries/LibWakeLock/: DisplaySleepInhibitor.h  DisplaySleepInhibitorIOKit.cpp  DisplaySleepInhibitorNoOp.cpp
Libraries/LibWasm/: CMakeLists.txt  Constants.h  CraneliftBridge.cpp  Types.h
Libraries/LibWeb/: CMakeLists.txt  Dump.cpp  Forward.h  GraphemeEdgeTracker.cpp  GraphemeEdgeTracker.h  Namespace.cpp  Namespace.h  RefCountedTreeNode.h  TextAffinity.h  VisualLines.cpp  VisualLines.h  idl_files.cmake
Libraries/LibWebView/: Application.cpp  Application.h  Attribute.cpp  Attribute.h  Autocomplete.cpp  Autocomplete.h  AutocompleteMuxer.cpp  AutocompleteMuxer.h  AutocompleteRanker.cpp  AutocompleteRanker.h  AutocompleteService.cpp  AutocompleteService.h  BookmarkStore.cpp  BookmarkStore.h  BrowserProcess.cpp  BrowserProcess.h  CMakeLists.txt  CanonicalNavigable.cpp  CanonicalNavigable.h  CanonicalTraversable.cpp  CanonicalTraversable.h  CompositorClient.cpp  CompositorClient.h  CompositorConnection.cpp  CompositorConnection.h  CompositorHostBase.cpp  CompositorHostBase.h  CookieJar.cpp  CookieJar.h  DictionaryLookup.cpp  DictionaryLookup.h  DownloadPresentation.cpp  DownloadPresentation.h  FileDownloader.cpp  FileDownloader.h  Forward.h  HeadlessWebView.cpp  HeadlessWebView.h  HelperProcess.cpp  HelperProcess.h  (+49 more)
Libraries/LibWebView/WebUI/: HistoryUI.cpp  SettingsUI.cpp
Meta/: WPT.sh  ladybird.py  migrate-ladybird-profile.py
Meta/CMake/: all_the_debug_macros.cmake  check_for_dependencies.cmake  common_compile_options.cmake  lagom_install_options.cmake  libweb_generators.cmake  rust_crate.cmake  sync_rust_ffi_header.cmake
Services/: RendererSandbox.h  RendererSandboxLinux.cpp  RendererSandboxMacOS.cpp  RendererSandboxUnimplemented.cpp
Tests/: CMakeLists.txt
Tests/UI/Qt/: CMakeLists.txt  TestNativeWindowContainerFocus.cpp
Toolchain/: BuildVcpkg.py
UI/: CMakeLists.txt
Utilities/: dump-html-tokens.cpp  dump-html-tree.cpp  wasm.cpp
(+4597 files in other folders)
